chore: made some improvement
