# server/docs/swagger.json
@@ -162,7 +162,7 @@
                         "jwtCookieAuth": []
                     }
                 ],
-                "description": "Create a new auction",
+                "description": "Creates a new auction.",
                 "consumes": [
                     "application/json"
                 ],
@@ -175,7 +175,7 @@
                 "summary": "Create Auction",
                 "parameters": [
                     {
-                        "description": "Auction payload",
+                        "description": "Auction create payload",
                         "name": "payload",
                         "in": "body",
                         "required": true,
@@ -186,7 +186,7 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created",
+                        "description": "Created auction",
                         "schema": {
                             "$ref": "#/definitions/github_com_puremike_online_auction_api_internal_models.CreateAuctionResponse"
                         }
@@ -1104,6 +1104,9 @@
                 "id": {
                     "type": "string"
                 },
+                "image_path": {
+                    "type": "string"
+                },
                 "seller_id": {
                     "type": "string"
                 },
@@ -1183,6 +1186,9 @@
                     "type": "string"
                 },
                 "end_time": {
+                    "type": "string"
+                },
+                "image_path": {
                     "type": "string"
                 },
                 "start_time": {
