# server/internal/models/auction.go
@@ -13,6 +13,7 @@ type Auction struct {
 	Status        string    `json:"status"` // "open", "closed"
 	StartTime     time.Time `json:"start_time"`
 	EndTime       time.Time `json:"end_time"`
+	ImagePath     string    `json:"image_path"`
 	SellerID      string    `json:"seller_id"`
 	WinnerID      string    `json:"winner_id"`
 	CreatedAt     time.Time `json:"created_at"`
@@ -26,6 +27,7 @@ type CreateAuctionRequest struct {
 	Type          string  `json:"type" binding:"required,oneof=english dutch sealed"`
 	StartTime     string  `json:"start_time" binding:"required"`
 	EndTime       string  `json:"end_time" binding:"required"`
+	ImagePath     string  `json:"image_path"`
 }
 
 type CreateAuctionResponse struct {
@@ -40,4 +42,11 @@ type CreateAuctionResponse struct {
 	EndTime       time.Time `json:"end_time"`
 	SellerID      string    `json:"seller_id"`
 	CreatedAt     time.Time `json:"created_at"`
+	ImagePath     string    `json:"image_path"`
+}
+
+type AuctionFilter struct {
+	Type          string  `json:"type"`
+	Status        string  `json:"status"`
+	StartingPrice float64 `json:"starting_price"`
 }
